--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
+        echo $PWD
         pip install -r ../../requirements.txt
     - name: Lint with flake8
       run: |
